Modify projects section in index.html
Updated project list in the portfolio.

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <h2>Projects</h2>
         <ul>
             <li>Personal Portfolio Website</li>
+            <li>Cricket Match Ticket Booking Website</li>
             <li>Simple Calculator ( C language )</li>
-            <li>College Timetable Web Page</li>
         </ul>
     </section>
     <section >
@@ -91,4 +91,5 @@
     <footer>Thank You</footer>
  
 </body>
+
 </html>
