--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <ul>
             <li>Personal Portfolio Website</li>
             <li>Cricket Match Ticket Booking Website</li>
+            <a href=" https://codes-with-nsr.github.io/CWC-2023-TICKET-BOOKING-/">
             <li>Simple Calculator ( C language )</li>
         </ul>
     </section>
@@ -93,3 +94,4 @@
 </body>
 
 </html>
+
