Fix project link and improve HTML structure
Updated project link to include a clickable view option.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <ul>
             <li>Personal Portfolio Website</li>
             <li>Cricket Match Ticket Booking Website</li>
-            <a href=" https://codes-with-nsr.github.io/CWC-2023-TICKET-BOOKING-/">
+            <a href=" https://codes-with-nsr.github.io/CWC-2023-TICKET-BOOKING-/" style="color:black">Click to view</a>
             <li>Simple Calculator ( C language )</li>
         </ul>
     </section>
@@ -94,4 +94,5 @@
 </body>
 
 </html>
+
 
