--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <ul>
             <li>Personal Portfolio Website</li>
             <li>Cricket Match Ticket Booking Website</li>
-            <li><a href=" https://codes-with-nsr.github.io/CWC-2023-TICKET-BOOKING-/" style="color: blue;" >Click to view</a></li>
+            <a href=" https://codes-with-nsr.github.io/CWC-2023-TICKET-BOOKING-/" style="color: white;" >Click to view</a>
             <li>Simple Calculator ( C language )</li>
         </ul>
     </section>
@@ -94,6 +94,7 @@
 </body>
 
 </html>
+
 
 
 
