Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
         <h2>Projects</h2>
         <ul>
             <li>Personal Portfolio Website</li>
-            <li>Cricket Match Ticket Booking Website</li>
-            <a href=" https://codes-with-nsr.github.io/CWC-2023-TICKET-BOOKING-/" style="color: white;" >Click to view</a>
+            <li>Cricket Match Ticket Booking Website</li><a href=" https://codes-with-nsr.github.io/CWC-2023-TICKET-BOOKING-/" style="color: white;" >Click to view</a>
             <li>Simple Calculator ( C language )</li>
         </ul>
     </section>
@@ -94,6 +93,7 @@
 </body>
 
 </html>
+
 
 
 
