--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h2>Projects</h2>
         <ul>
             <li>Personal Portfolio Website</li>
-            <li>Cricket Match Ticket Booking Website</li><a href=" https://codes-with-nsr.github.io/CWC-2023-TICKET-BOOKING-/" style="color: white;" >Click to view</a>
+            <li>Cricket Match Ticket Booking Website <a href=" https://codes-with-nsr.github.io/CWC-2023-TICKET-BOOKING-/" target="_blank" style="color: white;" >Click to view</a></li>
             <li>Simple Calculator ( C language )</li>
         </ul>
     </section>
@@ -93,6 +93,7 @@
 </body>
 
 </html>
+
 
 
 
