--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
    
     <section id="education">
         <h2>Education</h2>
+    </section>
+
+   
+    <section class="skill" id="skills">
         <ul>
             <li>Pursuing B.Tech in Information technology - ZEAL COLLEGE OF ENGINEERING & RESEARCH, PUNE (2025 - 2029)</li>
             <li> 12 - Y.C Sicence & Arts Junior College , Mangrulpir</li>
            
             
         </ul>
-    </section>
-
-   
-    <section id="skills">
         <h2>Skills</h2>
         <ul>
             <li>HTML</li>
@@ -94,6 +94,7 @@
 </body>
 
 </html>
+
 
 
 
