--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2>Projects</h2>
         <ul>
             <li>Personal Portfolio Website</li>
-            <li>College Id Card</li>
+            <li>College Id Card <a href="" target="_blank" style="color: white;" >Click to view</a></li>
             <li>Cricket Match Ticket Booking Website <a href=" https://codes-with-nsr.github.io/CWC-2023-TICKET-BOOKING-/" target="_blank" style="color: white;" >Click to view</a></li>
             <li>Simple Calculator ( C language )</li>
         </ul>
@@ -92,6 +92,7 @@
 </body>
 
 </html>
+
 
 
 
