Add copyright notice to footer
Added copyright notice to the footer.

--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
         <a href="https://github.com/codes-with-nsr/demo" style="color: blue;">Github</a>
     </section>
 
-    <footer>Thank You</footer>
+    <footer>&copy; 2025 Nikhil Raut. All rights reserved.</footer>
  
 </body>
 
 </html>
+
 
 
 
