--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </ul>
           </section>
            
-           <section id="skills"> 
+           <section class="abc" id="skills"> 
         
         <h2>Skills</h2>
         <ul>
@@ -91,6 +91,7 @@
 </body>
 
 </html>
+
 
 
 
